Travel::Status::DE::URA 0.03 - Thu Jan 23 2014

    * Result: Relative times (countdown, countdown_sec) are now computed
      relative to the creation of their Travel::Status::DE::URA object. They
      used to be relative to the call of the "results" function.
    * Result: Fix countdown_sec accessor
    * Result: Do DateTime math on demand, not when
      creating the object. Halves the average runtime, though this depends
      on the amount of results used by the application (the more results
      are used, the less notable the performance gain will be)

Travel::Status::DE::URA 0.02 - Thu Dec 26 2013

    * aseag-m: Fix spaces in stop names (they didn't match anything)
    * Remove fuzzy matching from constructor / ->results API. Use
      the new get_stop_by_name function instead (returns all matching stops).
      Update aseag-m accordingly

Travel::Status::DE::URA 0.01 - Sun Dec 22 2013

    * Initial release